--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin.csproj
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Views\Management\main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
