Dinamic Supliers with Img

--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Web.config
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Web.config
@@ -42,6 +42,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="scotiasuppliersEntities" connectionString="metadata=res://*/Models.ScotiaSuppliersDB.csdl|res://*/Models.ScotiaSuppliersDB.ssdl|res://*/Models.ScotiaSuppliersDB.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=sajago99;persistsecurityinfo=True;database=scotiasuppliers&quot;" providerName="System.Data.EntityClient" />
+    <add name="scotiasuppliersEntities1" connectionString="metadata=res://*/Models.ScotiaSuppliersDB.csdl|res://*/Models.ScotiaSuppliersDB.ssdl|res://*/Models.ScotiaSuppliersDB.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=sajago99;persistsecurityinfo=True;database=scotiasuppliers&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
