--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin.csproj
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin.csproj
@@ -96,10 +96,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Design\Management\Colpatria.png" />
     <Content Include="Design\Management\go.png" />
+    <Content Include="Design\Management\libreta.png" />
+    <Content Include="Design\Management\logol.jpg" />
+    <Content Include="Design\Management\logol.png" />
+    <Content Include="Design\Management\lupa.png" />
+    <Content Include="Design\Management\lupa1.png" />
+    <Content Include="Design\Management\lupa2.png" />
     <Content Include="Design\Management\main.css" />
+    <Content Include="Design\Management\ojo.png" />
+    <Content Include="Design\Management\profileimg.png" />
     <Content Include="Design\Management\PRUEBA.html" />
     <Content Include="Design\Management\reset.css" />
+    <Content Include="Design\Management\Scotia.png" />
     <Content Include="Design\Management\scotiabank.png" />
     <Content Include="Design\Proveedores\CSS\animate.css" />
     <Content Include="Design\Proveedores\CSS\bootstrap.min.css" />
@@ -116,17 +126,24 @@
     <Content Include="Design\Proveedores\productos.html" />
     <Content Include="Design\Proveedores\script.js" />
     <Content Include="Global.asax" />
+    <EntityDeploy Include="Models\ScotiaSuppliersDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ScotiaSuppliersDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\ScotiaSuppliersDB.edmx.diagram">
+      <DependentUpon>ScotiaSuppliersDB.edmx</DependentUpon>
+    </Content>
+    <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Models\ScotiaSuppliersDB.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ScotiaSuppliersDB.Context.cs</LastGenOutput>
       <DependentUpon>ScotiaSuppliersDB.edmx</DependentUpon>
+      <LastGenOutput>ScotiaSuppliersDB.Context.cs</LastGenOutput>
     </Content>
     <Content Include="Models\ScotiaSuppliersDB.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ScotiaSuppliersDB.edmx</DependentUpon>
       <LastGenOutput>ScotiaSuppliersDB.cs</LastGenOutput>
     </Content>
-    <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
@@ -168,13 +185,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
-    <EntityDeploy Include="Models\ScotiaSuppliersDB.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ScotiaSuppliersDB.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\ScotiaSuppliersDB.edmx.diagram">
-      <DependentUpon>ScotiaSuppliersDB.edmx</DependentUpon>
-    </Content>
     <None Include="packages.config" />
     <Content Include="Views\Management\Index.cshtml" />
     <Content Include="Views\Suppliers\Index.cshtml" />
